style: use range operator

--- a/src/EtherSharp.ERC/EtherSharp.ERC.csproj
+++ b/src/EtherSharp.ERC/EtherSharp.ERC.csproj
@@ -19,6 +19,7 @@
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<PackageIcon>logo.png</PackageIcon>
+		<EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
 	</PropertyGroup>
 
 	<ItemGroup>
