--- a/bench/EtherSharp.Bench.csproj
+++ b/bench/EtherSharp.Bench.csproj
@@ -28,7 +28,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="EtherSharp.Generator" Version="$(EthersharpVersion)" />
 		<PackageReference Include="BenchmarkDotNet" Version="0.14.0" />
 		<PackageReference Include="Nethereum.HdWallet" Version="4.29.0" />
 		<PackageReference Include="Nethereum.RLP" Version="4.29.0" />
@@ -38,6 +37,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\src\EtherSharp\EtherSharp.csproj" />
+		<ProjectReference Include="..\src\EtherSharp.Generator\EtherSharp.Generator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" PrivateAssets="all" />
 	</ItemGroup>
 
 </Project>
