--- a/src/EtherSharp.ERC/EtherSharp.ERC.csproj
+++ b/src/EtherSharp.ERC/EtherSharp.ERC.csproj
@@ -42,7 +42,16 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\EtherSharp\EtherSharp.csproj" PrivateAssets="" />
-		<ProjectReference Include="..\EtherSharp.Generator\EtherSharp.Generator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" PrivateAssets="all" />
+		<ProjectReference Include="..\EtherSharp.Generator\EtherSharp.Generator.csproj" ReferenceOutputAssembly="false" PrivateAssets="all" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Analyzer Include="..\EtherSharp.Generator\bin\$(Configuration)\netstandard2.0\EtherSharp.Generator.dll" />
+		<Analyzer Include="..\EtherSharp.Generator\bin\$(Configuration)\netstandard2.0\Epoche.Keccak256.dll" />
+		<Analyzer Include="..\EtherSharp.Generator\bin\$(Configuration)\netstandard2.0\Microsoft.Bcl.AsyncInterfaces.dll" />
+		<Analyzer Include="..\EtherSharp.Generator\bin\$(Configuration)\netstandard2.0\Microsoft.Bcl.HashCode.dll" />
+		<Analyzer Include="..\EtherSharp.Generator\bin\$(Configuration)\netstandard2.0\System.Text.Encodings.Web.dll" />
+		<Analyzer Include="..\EtherSharp.Generator\bin\$(Configuration)\netstandard2.0\System.Text.Json.dll" />
 	</ItemGroup>
 
 	<ItemGroup>
