--- a/src/EtherSharp.Generator/EtherSharp.Generator.csproj
+++ b/src/EtherSharp.Generator/EtherSharp.Generator.csproj
@@ -52,11 +52,11 @@
 	</ItemGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-	  <NoWarn>NU5128;CA1822;NU1510</NoWarn>
+	  <NoWarn>NU5128;CA1822</NoWarn>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-	  <NoWarn>NU5128;CA1822;NU1510</NoWarn>
+	  <NoWarn>NU5128;CA1822</NoWarn>
 	</PropertyGroup>
 
 	<ItemGroup>
