--- a/src/EtherSharp.Generator/EtherSharp.Generator.csproj
+++ b/src/EtherSharp.Generator/EtherSharp.Generator.csproj
@@ -3,29 +3,13 @@
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
-		
+
 		<FileVersion>$(AssemblyVersion)</FileVersion>
 		<Version>$(AssemblyVersion)</Version>
-		
-		<OutputType>Library</OutputType>
+
 		<IsPackable>false</IsPackable>
-		
 		<IsRoslynComponent>true</IsRoslynComponent>
-		<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
 		<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
-
-		<PackageIcon>logo.png</PackageIcon>
-	</PropertyGroup>
-
-	<PropertyGroup>
-		<Title>EtherSharp.Generator</Title>
-		<Company>Farsight CDA Crypto Development &amp; Analytics UG</Company>
-		<Authors>Playwo</Authors>
-		<PackageProjectUrl>https://github.com/Farsight-CDA/EtherSharp</PackageProjectUrl>
-		<RepositoryUrl>https://github.com/Farsight-CDA/EtherSharp</RepositoryUrl>
-	</PropertyGroup>
-
-	<PropertyGroup>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<RootNamespace>EtherSharp.Generator</RootNamespace>
 		<LangVersion>latest</LangVersion>
@@ -33,8 +17,7 @@
 		<EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
 		<EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
 		<AnalysisLevel>latest</AnalysisLevel>
-		<GenerateDocumentationFile>true</GenerateDocumentationFile>
-		<PackageIcon>logo.png</PackageIcon>
+		<GenerateDocumentationFile>false</GenerateDocumentationFile>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -44,22 +27,10 @@
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
 
-		<PackageReference Include="Keccak256" Version="1.0.0" PrivateAssets="all" GeneratePathProperty="true" />
-		<PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="9.0.3" PrivateAssets="all" GeneratePathProperty="true" />
-		<PackageReference Include="Microsoft.Bcl.HashCode" Version="6.0.0" PrivateAssets="all" GeneratePathProperty="true" />
-		<PackageReference Include="System.Text.Encodings.Web" Version="9.0.3" PrivateAssets="all" GeneratePathProperty="true" />
-		<PackageReference Include="System.Text.Json" Version="9.0.3" PrivateAssets="all" GeneratePathProperty="true" />
-	</ItemGroup>
-
-	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-	  <NoWarn>NU5128;CA1822</NoWarn>
-	</PropertyGroup>
-
-	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-	  <NoWarn>NU5128;CA1822</NoWarn>
-	</PropertyGroup>
-
-	<ItemGroup>
-		<None Include="../../resources/logo.png" Pack="true" PackagePath="" />
+		<PackageReference Include="Keccak256" Version="1.0.0" PrivateAssets="all" />
+		<PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="9.0.3" PrivateAssets="all" />
+		<PackageReference Include="Microsoft.Bcl.HashCode" Version="6.0.0" PrivateAssets="all" />
+		<PackageReference Include="System.Text.Encodings.Web" Version="9.0.3" PrivateAssets="all" />
+		<PackageReference Include="System.Text.Json" Version="9.0.3" PrivateAssets="all" />
 	</ItemGroup>
 </Project>
