--- a/src/EtherSharp.ERC/EtherSharp.ERC.csproj
+++ b/src/EtherSharp.ERC/EtherSharp.ERC.csproj
@@ -20,6 +20,7 @@
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<PackageIcon>logo.png</PackageIcon>
 		<EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
+		<NoWarn>$(NoWarn);CS1591</NoWarn>
 	</PropertyGroup>
 
 	<ItemGroup>
