--- a/.editorconfig
+++ b/.editorconfig
@@ -19,7 +19,7 @@ indent_style = space
 tab_width = 4
 
 # New line preferences
-insert_final_newline = false
+insert_final_newline = true
 
 #### .NET Code Actions ####
 
