--- a/src/EtherSharp/EtherSharp.csproj
+++ b/src/EtherSharp/EtherSharp.csproj
@@ -56,7 +56,7 @@
 
 	<ItemGroup>
 		<AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
-			<_Parameter1>$(MSBuildProjectName).Test</_Parameter1>
+			<_Parameter1>EtherSharp.Tests</_Parameter1>
 		</AssemblyAttribute>
 	</ItemGroup>
 
